# openclaw-news-intel

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-fundus.txt  requirements.txt
config/: sources.yaml  watchlists.yaml
docs/: architecture.md  example-output.md  openclaw-integration.md  openclaw-quickstart.md  operational-checklist.md
examples/: openclaw-prompts.md
news_pipeline/: __init__.py  cli.py  collector.py  config.py  dedupe.py  digest.py  filters.py  normalize.py  relevance.py  scanner.py  storage.py
news_pipeline/ingest/: fundus_adapter.py  gdelt.py  rss.py
openclaw-skills/news-intelligence/: SKILL.md
scripts/: install_openclaw_skill.sh  run_morning_scan.sh  setup.sh  setup_with_fundus.sh  smoke_test.sh
tests/: test_collect_topic.py  test_digest_relevance.py  test_onboarding_ux.py  test_openclaw_skill.py  test_optional_adapters.py  test_scan_behavior.py  test_search_behavior.py
