[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-intel"
version = "0.2.0-beta.1"
description = "Local news intelligence pipeline"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
  "feedparser>=6.0.11",
  "PyYAML>=6.0.1",
  "python-dateutil>=2.9.0.post0",
  "requests>=2.32.3",
  "urllib3<2",
]

[project.optional-dependencies]
fundus = ["fundus>=0.5.0"]
test = ["pytest>=8.2"]

[project.scripts]
news-intel = "news_pipeline.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["news_pipeline*"]
